package JFSM.JFSM.src.main.java.com.fsm.event.retry.base;

/**
 * @class public enum RetryStatus
 * @brief RetryStatus enum
 */
public enum RetryStatus {

    NONE,
    IDLE,
    ONGOING

}
